--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<!-- Ultimate Game Stash file--> 
-<!-- For the regularly updating doc go to https://docs.google.com/document/d/1_FmH3BlSBQI7FGgAQL59-ZPe8eCxs35wel6JUyVaG8Q/ -->
-<!-- Made by Genizy-->
 
 <!DOCTYPE html>
 <html lang="en-US">
@@ -8,7 +5,7 @@
 <head>
     <base href="https://rawcdn.githack.com/genizy/google-class/main/gdlite/">
     <title>Geometry Dash</title>
-    <link rel="icon" type="image/png" href="https://e3334afd.cf-nate.pages.dev/0/g/geodash/game/splash.png">
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <meta name="description" content="Play Geometry Dash Lite Online For Free on Chromebook, PC, Windows, Desktop in Chrome and modern browsers.">
     <link rel="canonical" href="https://gamecomets.com/game/geometry-dash-lite/" />
     <meta name="robots" content="noindex, nofollow">
