Update favicon link to use a PNG image

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!-- Ultimate Game Stash file--> 
+<!-- For the regularly updating doc go to https://docs.google.com/document/d/1_FmH3BlSBQI7FGgAQL59-ZPe8eCxs35wel6JUyVaG8Q/ -->
+<!-- Made by Genizy-->
 
 <!DOCTYPE html>
 <html lang="en-US">
@@ -5,7 +8,7 @@
 <head>
     <base href="https://rawcdn.githack.com/genizy/google-class/main/gdlite/">
     <title>Geometry Dash</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/png" href="https://m.media-amazon.com/images/I/61mVIP6Oo1L.png">
     <meta name="description" content="Play Geometry Dash Lite Online For Free on Chromebook, PC, Windows, Desktop in Chrome and modern browsers.">
     <link rel="canonical" href="https://gamecomets.com/game/geometry-dash-lite/" />
     <meta name="robots" content="noindex, nofollow">
